2nd training/Community/Community/Community1/force-app/main/default/objects/Check__c/Check__c.object-meta.xml
<CustomObject>
    <label>Check</label>
    <nameField>
        <displayFormat>BC-{000000}</displayFormat>
        <label>Check Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Checks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>