2nd training/Community/Community/Community1/force-app/main/default/objects/Check__c/fields/Company_Cancelled__c.field-meta.xml
<CustomField>
    <fullName>Company_Cancelled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Company Cancelled (ACRA)</label>
    <type>Checkbox</type>
</CustomField>