2nd training/Community/Community/Community1/force-app/main/default/objects/Check__c/fields/Findings_URLS__c.field-meta.xml
<CustomField>
    <fullName>Findings_URLS__c</fullName>
    <inlineHelpText>Give details of your findings if any checkbox is Ticked and copy any supporting URL to this box</inlineHelpText>
    <label>Findings and supporting Links</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>