2nd training/Community/Community/Community1/force-app/main/default/objects/Check__c/fields/Google__c.field-meta.xml
<CustomField>
    <fullName>Google__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Red Flags from Web search</label>
    <type>Checkbox</type>
</CustomField>