2nd training/Community/Community/Community1/force-app/main/default/objects/Check__c/fields/Interpol_Wanted__c.field-meta.xml
<CustomField>
    <fullName>Interpol_Wanted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Interpol Wanted</label>
    <type>Checkbox</type>
</CustomField>