2nd training/Community/Community/Community1/force-app/main/default/objects/Check__c/fields/NRIC_ID_No__c.field-meta.xml
<CustomField>
    <fullName>NRIC_ID_No__c</fullName>
    <label>NRIC/ID No.</label>
    <length>12</length>
    <type>Text</type>
</CustomField>