2nd training/Community/Community/Community1/force-app/main/default/objects/Check__c/fields/SPF_Warrant_of_Arrest__c.field-meta.xml
<CustomField>
    <fullName>SPF_Warrant_of_Arrest__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SPF Warrant of Arrest</label>
    <type>Checkbox</type>
</CustomField>