2nd training/Community/Community/Community1/force-app/main/default/objects/Check__c/fields/Website_look_poorly_done__c.field-meta.xml
<CustomField>
    <fullName>Website_look_poorly_done__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Website look poorly done</label>
    <type>Checkbox</type>
</CustomField>