2nd training/Community/Community/Community1/force-app/main/default/objects/Check__c/fields/Website_not_found_for_company__c.field-meta.xml
<CustomField>
    <fullName>Website_not_found_for_company__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Website not found for company</label>
    <type>Checkbox</type>
</CustomField>